--- a/koreksi_otomatis_bubble_web (1).html
+++ b/koreksi_otomatis_bubble_web (1).html
@@ -1,9 +1,3 @@
-<!--
-KOREKSI OTOMATIS (Versi silang di lingkaran)
-- Deteksi tanda silang / coretan di lingkaran
-- Jika ada lebih dari satu jawaban dalam 1 soal → dihitung benar asalkan salah satunya cocok dengan kunci
--->
-
 <!doctype html>
 <html lang="id">
 <head>
@@ -19,6 +13,7 @@ KOREKSI OTOMATIS (Versi silang di lingkaran)
     textarea{width:100%;height:120px}
     video, canvas{width:100%;border-radius:8px;background:#000}
     button{padding:8px 12px;border-radius:8px;border:0;background:#1f7ed6;color:white;cursor:pointer}
+    select{padding:6px;border-radius:6px;margin-top:6px}
     .muted{color:#666;font-size:13px}
     pre{background:#fff;padding:12px;border-radius:8px;overflow:auto}
   </style>
@@ -26,12 +21,24 @@ KOREKSI OTOMATIS (Versi silang di lingkaran)
 <body>
   <div class="container">
     <h1>Koreksi Otomatis — Versi Silang di Lingkaran</h1>
-    <p class="muted">Isi kunci (contoh: <code>1:A,2:C,3:B</code>). Foto lembar jawaban dengan tanda silang (✖) di lingkaran.</p>
+    <p class="muted">Isi kunci (contoh: <code>1:A,2:C,3:B</code>). Atau pilih jumlah soal untuk membuat kunci default otomatis.</p>
 
     <div class="row">
       <div class="col">
-        <label>Kunci Jawaban:</label>
-        <textarea id="answerKey" placeholder="1:A,2:B,3:C,...">1:A,2:B,3:C,4:D,5:A</textarea>
+        <label>Pilih jumlah soal:</label>
+        <select id="jumlahSoal">
+          <option value="">-- Pilih --</option>
+          <option>10</option>
+          <option>20</option>
+          <option>30</option>
+          <option>40</option>
+          <option>50</option>
+        </select>
+
+        <div style="margin-top:8px">
+          <label>Kunci Jawaban:</label>
+          <textarea id="answerKey" placeholder="1:A,2:B,3:C,...">1:A,2:B,3:C,4:D,5:A</textarea>
+        </div>
 
         <div style="margin-top:8px">
           <button id="openCam">Buka Kamera</button>
@@ -76,6 +83,20 @@ let lastImage=null;
 
 const logEl = document.getElementById('log');
 function log(t){ console.log(t); logEl.textContent = (new Date()).toLocaleTimeString() + ' - ' + t + '\n' + logEl.textContent; }
+
+// buat kunci default sesuai jumlah soal
+const jumlahSoalEl = document.getElementById('jumlahSoal');
+jumlahSoalEl.addEventListener('change', ()=>{
+  let n = parseInt(jumlahSoalEl.value,10);
+  if(!n) return;
+  let abcd = ['A','B','C','D'];
+  let arr = [];
+  for(let i=1;i<=n;i++){
+    arr.push(i+":"+abcd[(i-1)%4]);
+  }
+  document.getElementById('answerKey').value = arr.join(',');
+  log('Kunci default dibuat untuk '+n+' soal.');
+});
 
 document.getElementById('openCam').addEventListener('click', async ()=>{
   try{
